--- a/frontend/Menu/menu.css
+++ b/frontend/Menu/menu.css
@@ -46,9 +46,11 @@ h1 {
     display: flex;
     flex-direction: row;
     width: 100%;
+    margin-top: 1rem;
 }
 .top-header-left{
     flex: 10%;
+    padding-left: 1.5rem;
 }
 .top-header-mid{
     flex: 60%;
